--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "eslint": "^8.57.0",
+    "prisma": "^5.11.0",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3"
   }
